Revert "fix(FEC-11364): Live Dvr - if seek back, the scrubber "jumps" too far back and after return to correct point (#615)"
This reverts commit 6bc46513

--- a/src/components/top-bar/_top-bar.scss
+++ b/src/components/top-bar/_top-bar.scss
@@ -76,7 +76,6 @@
     .top-bar {
       visibility: visible;
       margin-top: 0;
-      min-height: #{$gui-gutter}px;
     }
   }
 }
